--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,7 @@ plugins:
   - jekyll-feed
 
 markdown: kramdown
-kramdown:
-    math_engine: mathjax
+highlighter: rouge
 
 # Exclude from processing.
 # The following items will not be processed, by default.
